# interp

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  Makefile.am  Makefile.in  README.md  TODO  TODO.md  autoclean.sh  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  detail.md  fullclean.sh  interp  interp.cflags  interp.creator.user.1a94ef9  interp.files  interp.includes  interp.libs  interp.pro  list.dev  newcmds.md  valgrind-out.txt
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
build-interp-Desktop_Qt_6_6_0_GCC_64bit-Debug/: Makefile  interp
build-interp-Desktop_Qt_6_6_1_GCC_64bit-Debug/: Makefile  interp
build-interp-Desktop_Qt_6_6_1_GCC_64bit-Release/: Makefile  interp
debug/: interp  list.dev
extra/: Makefile.am  interp.hlp  wiunistd.cc
include/: .goutputstream-LYE0C2  commands.h  error_info.h  errors.h  foo1.h  help.h  intrinsic.h  logger.h  parser.h  simple_strlib.h  support.h  threadpool.h
include/utils/: filesys.h  getopt.h  huff.h  minIni.h  xgetopt.h
linux/: interp.pro
linux/ARM_etc/: Makefile  README.md
optim/: interp
src/: foo1.c  help.c  intrinsic.c  main.c  threadpool.c
src/.deps/: foo1.Po  main.Po  threadpool.Po
src/utils/: config.c  filesys.c  huff.c  minIni.c
src/utils/.deps/: filesys.Po  huff.Po
windows/: PropertySheet.props  README.md  interp.sln  interp.vcxproj  interp.vcxproj.filters
windows/include/: foo1.c  registry.h  winfilesys.h  winthread.h  winunistd.h
windows/src/: registry.c  winfilesys.c  winfoo1.c  winstring_ext.c  winthread.c  winunistd.h
